--- a/about.html
+++ b/about.html
@@ -61,7 +61,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-xxl-12">
-                    <h4>About Us</h4>
+                    <h4>About Me</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, illo!</p>
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li>About</li>
@@ -88,8 +89,6 @@
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis voluptatibus ab laboriosam odio, neque nobis quaerat eveniet numquam corporis et.</p>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis voluptatibus ab laboriosam odio, neque nobis quaerat eveniet numquam corporis et.</p>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis voluptatibus ab laboriosam odio, neque nobis quaerat eveniet numquam corporis et.</p>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis voluptatibus ab laboriosam odio, neque nobis quaerat eveniet numquam corporis et.</p>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis voluptatibus ab laboriosam odio, neque nobis quaerat eveniet numquam corporis et.</p>
                     </div>
                 </div>
                 <div class="col-xxl-5">
@@ -97,6 +96,7 @@
                         <i class="fab fa-facebook-f"></i>
                         <div class="about-content">
                             <h4 class="title">our vission</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente eligendi provident sunt ut porro ipsa dolore inventore omnis modi minima.</p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente eligendi provident sunt ut porro ipsa dolore inventore omnis modi minima.</p>
                         </div>
                     </div>
